--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,25 @@
 
+body {
+  font-family: 'Viaoda Libre', cursive;
+  font-size: x-large;
+}
+.background {
+  background-image: url(../img/bennypizza.png);
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 0;
+  padding-bottom: 30%;
+  overflow: auto;
+}
 
+.container {
+  width: 100%;
+  margin: auto;
+  padding-top: 5%;
+  min-width: 800px;
+}
 .container h1 {
   text-align: center;
 }
